[package]
name = "rewrite"
version = "0.1.0"
edition = "2021"
authors = ["Steven Fourie <steven.fouriex@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
http = "1.3"
lol_html = "1.1.0"
console_log = "0.2.0"
log = "0.4.17"